--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,7 +18,7 @@ dst_world_preset: SURVIVAL_TOGETHER
 
 # network
 dst_server_as_a_service: true
-dst_server_name: "[Host]'s World"
+dst_server_name: "default world name"
 dst_server_description: Once uppon a time in a quite hostile world.
 dst_server_port: 10999
 dst_server_password: password
