--- a/tasks/server.yml
+++ b/tasks/server.yml
@@ -5,15 +5,20 @@
     path: '{{ steamcmd_user_home }}.klei/{{ dst_shard_name }}/'
     state: directory
 
-- name: creates settings file
+- name: creates settings file cluster.ini
   template:
-    src: server/settings.ini.j2
-    dest: '{{ steamcmd_user_home }}.klei/{{ dst_shard_name }}/settings.ini'
+    src: server/cluster.ini.j2
+    dest: '{{ steamcmd_user_home }}.klei/{{ dst_shard_name }}/cluster.ini'
+
+- name: creates settings file server.ini
+  template:
+    src: server/server.ini.j2
+    dest: '{{ steamcmd_user_home }}.klei/{{ dst_shard_name }}/server.ini'
 
 - name: creates server token file
   template:
-    src: server/server_token.txt.j2
-    dest: '{{ steamcmd_user_home }}.klei/{{ dst_shard_name }}/server_token.txt'
+    src: server/cluster_token.txt.j2
+    dest: '{{ steamcmd_user_home }}.klei/{{ dst_shard_name }}/cluster_token.txt'
 
 - name: creates world generation file.
   template:
