--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,12 +1,25 @@
 ---
 create_files:
-  - owner:              "{{ steamcmd_user }}"
-    group:              "{{ steamcmd_user }}"
-    mode:               '0755'
-    state:              'directory'
-    path:               "{{ steamcmd_user_home }}.klei/{{ dst_server_name }}/Cluster_1/"
+- owner: "{{ steamcmd_user }}"
+  group: "{{ steamcmd_user }}"
+  mode: '0755'
+  state: 'directory'
+  path: "{{ steamcmd_user_home }}.klei/{{ dst_server_name }}/Cluster_1"
+- owner: "{{ steamcmd_user }}"
+  group: "{{ steamcmd_user }}"
+  mode: '0755'
+  state: 'directory'
+  path: "{{ steamcmd_user_home }}.klei/{{ dst_server_name }}/Cluster_1/Master"
 symlinks:
-  - owner:              "{{ steamcmd_user }}"
-    group:              "{{ steamcmd_user }}"
-    src:                "{{ steamcmd_user_home }}.klei/{{ dst_server_name }}/server_token.txt"
-    dest:               "{{ steamcmd_user_home }}.klei/{{ dst_server_name }}/Cluster_1/cluster_token.txt"
+- owner: "{{ steamcmd_user }}"
+  group: "{{ steamcmd_user }}"
+  src: "{{ steamcmd_user_home }}.klei/{{ dst_server_name }}/cluster.ini"
+  dest: "{{ steamcmd_user_home }}.klei/{{ dst_server_name }}/Cluster_1/cluster.ini"
+- owner: "{{ steamcmd_user }}"
+  group: "{{ steamcmd_user }}"
+  src: "{{ steamcmd_user_home }}.klei/{{ dst_server_name }}/cluster_token.txt"
+  dest: "{{ steamcmd_user_home }}.klei/{{ dst_server_name }}/Cluster_1/cluster_token.txt"
+- owner: "{{ steamcmd_user }}"
+  group: "{{ steamcmd_user }}"
+  src: "{{ steamcmd_user_home }}.klei/{{ dst_server_name }}/server.ini"
+  dest: "{{ steamcmd_user_home }}.klei/{{ dst_server_name }}/Cluster_1/Master/server.ini"
