--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,6 +20,7 @@ dst_world_preset: SURVIVAL_TOGETHER
 dst_server_as_a_service: true
 dst_server_name: "default world name"
 dst_server_description: Once uppon a time in a quite hostile world.
+dst_master_port: 10990
 dst_master_server_port: 10999
 dst_server_port: '{{ dst_master_server_port }}'
 dst_server_password: password
@@ -49,4 +50,4 @@ dst_shard_is_master: false # define the master server
 dst_shard_name: overworld # define the shard name
 dst_shard_cluster_key: change_this_if_you_set_bind_ip
 dst_shard_master_ip: ~ # set the master server IP
-dst_shard_id: "{{ dst_shard_name | to_uuid }}"
+dst_shard_id: "{{ dst_shard_name }}"
