Cronjob:  Stop and start all DST instances.  Defaults:  Fixed some ports.  Portals between worlds now work, although I don't know how to make a caves world.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,8 +21,7 @@ dst_server_as_a_service: true
 dst_server_name: "default world name"
 dst_server_description: Once uppon a time in a quite hostile world.
 dst_master_port: 10990
-dst_master_server_port: 10999
-dst_server_port: '{{ dst_master_server_port }}'
+dst_server_port: 10999
 dst_server_password: password
 dst_server_save_slot: ~  # which save slot should the dedicated server load
 dst_server_intention: cooperative
