Fix relative path.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- include_vars: '../../../../sensitive/ansible/host_vars/{{ dontstarvetogether_server }}.yml'
+- include_vars: '../../../sensitive_ansible/host_vars/{{ dontstarvetogether_server }}.yml'
 - include: '../../tasks/initialize_files.yml'
   become: yes
 - include: requirements.yml
