--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,7 +13,7 @@
   become: yes
 - include: '../../tasks/create_files.yml'
   become: yes
-- include: '../../tasks/template_files.yml'
+- include: '../../tasks/install_files.yml'
   become: yes
 - include: '../../tasks/symlinks.yml'
   become: yes
