--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,52 +1,52 @@
 ---
 
 # steamcmd configuration
-steamcmd_user: steam
-steamcmd_user_home: /home/{{ steamcmd_user }}/
-steamcmd_directory: /home/{{ steamcmd_user }}/cmd/
+steamcmd_user:                  'steam'
+steamcmd_user_home:             '/home/{{ steamcmd_user }}/'
+steamcmd_directory:             '/home/{{ steamcmd_user }}/cmd/'
 steamcmd_steam:
-  username: anonymous
+  username:                     'anonymous'
   password:
 
-# app wide configuration
-dst_app_id: 343050
-dst_install_dir: '{{ steamcmd_user_home }}apps/dontstarvetogether/'
-dst_server_token: ~ # proves ownership of Don’t Starve Together
+# app wide configuration        
+dst_app_id:                     '343050'
+dst_install_dir:                '{{ steamcmd_user_home }}apps/dontstarvetogether/'
+dst_server_token:               '~' # proves ownership of Don’t Starve Together
 
 # world
-dst_world_preset: SURVIVAL_TOGETHER
+dst_world_preset:               'SURVIVAL_TOGETHER'
 
 # network
-dst_server_as_a_service: true
-dst_server_name: "default world name"
-dst_server_description: Once uppon a time in a quite hostile world.
-dst_master_port: 10990
-dst_server_port: 10999
-dst_server_password: password
-dst_server_save_slot: ~  # which save slot should the dedicated server load
-dst_server_intention: cooperative
-dst_max_players: 6 # 1..64
-dst_pvp: false # true | false
-dst_game_mode: survival # endless | survival | wilderness
-dst_enable_autosaver: true # creates a save at the start of each day, which will be resumed from when the server restarts
-dst_enable_snapshots: false # allow GSAs the ability to fully roll back a server to an older state
-dst_tick_rate: 30 # quality of the server, higher tick rate consumes more bandwidth and CPU
-dst_connection_timeout: 8000 # time in milliseconds that the server should wait before dropping a non responsive client
-dst_enable_vote_kick: false # vote kick allows users to vote to kick players that are disrupting the game
-dst_pause_when_empty: true # pause the simulation when the dedicated server is empty
-dst_offline_server: false
+dst_server_as_a_service:        true
+dst_server_name:                "default world name"
+dst_server_description:         'Once upon a time, in a quite hostile world.'
+dst_master_port:                '10990'
+dst_server_port:                '10999'
+dst_server_password:            'password'
+dst_server_save_slot:           '~'  # which save slot should the dedicated server load
+dst_server_intention:           'cooperative'
+dst_max_players:                '6' # 1..64
+dst_pvp:                        false # true | false
+dst_game_mode:                  'survival' # endless | survival | wilderness
+dst_enable_autosaver:           true # creates a save at the start of each day, which will be resumed from when the server restarts
+dst_enable_snapshots:           false # allow GSAs the ability to fully roll back a server to an older state
+dst_tick_rate:                  '30' # quality of the server, higher tick rate consumes more bandwidth and CPU
+dst_connection_timeout:         '8000' # time in milliseconds that the server should wait before dropping a non responsive client
+dst_enable_vote_kick:           false # vote kick allows users to vote to kick players that are disrupting the game
+dst_pause_when_empty:           true # pause the simulation when the dedicated server is empty
+dst_offline_server:             false
 
 # steam
-dst_disable_cloud: true
+dst_disable_cloud:              true
 
 # misc
-dst_console_enabled: true
-dst_autocompiler_enabled: true
+dst_console_enabled:            true
+dst_autocompiler_enabled:       true
 
 # shard
-dst_shard_enable: false # enable different server to work together
-dst_shard_is_master: false # define the master server
-dst_shard_name: overworld # define the shard name
-dst_shard_cluster_key: change_this_if_you_set_bind_ip
-dst_shard_master_ip: ~ # set the master server IP
-dst_shard_id: "{{ dst_shard_name }}"
+dst_shard_enable:               false # enable different server to work together
+dst_shard_is_master:            false # define the master server
+dst_shard_name:                 'overworld' # define the shard name
+dst_shard_cluster_key:          'change_this_if_you_set_bind_ip'
+dst_shard_master_ip:            '~' # set the master server IP
+dst_shard_id:                   "{{ dst_shard_name }}"
