Track dependencies in a consistent way across roles.

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -112,3 +112,4 @@ enable_services:
 start_services:         '{{ enable_services }}'
 restart_services:       '{{ enable_services }}'
 
+  - steamcmd
