Sometimes updates fail due to steam segfault.  New code captures the failure log and makes repeated attempts before giving up.  This should reduce monitoring noise.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - include_vars:                 '../../../sensitive-ansible/inventory/host_vars/{{ dontstarvetogether_server }}.yml'
+- include:                      '../../tasks/dependencies.yml'
 - include:                      '../../tasks/shell_commands_ignore_result.yml'
 - include:                      '../../tasks/install_packages.yml'
 - include:                      '../../tasks/create_files.yml'
