--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- include_vars:                 '../../../sensitive-ansible/inventory/host_vars/{{ dontstarvetogether_server }}.yml'
+- include_vars:                 '../../../sensitive-ansible/inventory/host_vars/{{ inventory_hostname }}.yml'
 - include:                      '../../tasks/dependencies.yml'
 - include:                      '../../tasks/shell_commands_ignore_result.yml'
 - include:                      '../../tasks/install_packages.yml'
