--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,16 +1,16 @@
 ---
 - include_vars:                 '../../../sensitive-ansible/inventory/host_vars/{{ inventory_hostname }}.yml'
-- include:                      '../../tasks/dependencies.yml'
-- include:                      '../../tasks/shell_commands_ignore_result.yml'
-- include:                      '../../tasks/install_packages.yml'
-- include:                      '../../tasks/create_files.yml'
-- include:                      '../../tasks/template_files.yml'
-- include:                      '../../tasks/install_files.yml'
-- include:                      '../../tasks/symlinks.yml'
-- include:                      '../../tasks/commands.yml'
-- include:                      '../../tasks/enable_services.yml'
-- include:                      '../../tasks/start_services.yml'
-- include:                      '../../tasks/restart_services.yml'
+- include_tasks:                '../../tasks/dependencies.yml'
+- include_tasks:                '../../tasks/shell_commands_ignore_result.yml'
+- include_tasks:                '../../tasks/install_packages.yml'
+- include_tasks:                '../../tasks/create_files.yml'
+- include_tasks:                '../../tasks/template_files.yml'
+- include_tasks:                '../../tasks/install_files.yml'
+- include_tasks:                '../../tasks/symlinks.yml'
+- include_tasks:                '../../tasks/commands.yml'
+- include_tasks:                '../../tasks/enable_services.yml'
+- include_tasks:                '../../tasks/start_services.yml'
+- include_tasks:                '../../tasks/restart_services.yml'
   when:                         create_files_result.changed
                                 or template_files_result.changed
                                 or install_files_result.changed
