Stop using "skipdeps".

--- a/instances/fruitopia/meta/main.yml
+++ b/instances/fruitopia/meta/main.yml
@@ -7,7 +7,6 @@
 # > the same LAN to see it in their server listing.
 dependencies:
   - role:                       dontstarvetogether
-    when:                       skipdeps is not defined       
     dst_master_port:            11010
     dst_server_port:            11011
     dst_server_name:            'Fruitopia'
@@ -19,8 +18,9 @@ dependencies:
     dst_shard_id:               1
     dst_world_preset:           'SURVIVE_TOGETHER'
     dst_shard_cluster_key:      "{{ dst_shard_cluster_key_fruitopia }}"
+    tags:
+      - 'dependency'
   - role:                       dontstarvetogether
-    when:                       skipdeps is not defined       
     dst_master_port:            11010
     dst_server_port:            11012
     dst_server_name:            'Fruitopia'
@@ -30,3 +30,5 @@ dependencies:
     dst_shard_id:               2
     dst_world_preset:           'DST_CAVE'
     dst_shard_cluster_key:      "{{ dst_shard_cluster_key_fruitopia }}"
+    tags:
+      - 'dependency'
